adjusted paths for GitHub Pages, adding bundle

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>manila-fodder file uploads</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../src/core.css">
+	<link rel="stylesheet" href="src/core.css">
 	<link rel="stylesheet" href="demo.css">
 	<style>
 * {
@@ -102,7 +102,7 @@ input[type=text] {
 		<p class="note">max. file size is 2 MB</p>
 	</manila-fodder>
 
-	<script src="../dist/demo.js"></script>
+	<script src="bundle.js"></script>
 </body>
 
 </html>
